[tool.poetry]
packages = [{ include = "threadspy", from = "." }]
name = "threads-py"
version = "0.0.9"
description = "Unofficial, Reverse-Engineered Python client for Meta's Threads."
license = "MIT"
authors = [
  "Junho Yeo <i@junho.io>",
  "iamiks <rmstjr1030@naver.com>",
  "DrunkLeen <reza.df.x@gmail.com>",
  "Ashrf <ashrftvm1@gmail.com>",
  "mirageoasis <kimhw0820@naver.com>",
  "Daethyra <dev-daethyra@protonmail.com>",
]
repository = "https://github.com/junhoyeo/threads-py"
readme = ["README.md", "LICENSE"]
keywords = ["threads", "instagram", "facebook", "meta", "api", "automation", "python"]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
requests = "^2.31.0"
dataclasses = "^0.6"
dataclasses-json = "^0.5.9"
pycryptodome = "^3.18.0"

[tool.poetry.group.ai]
optional = true
[tool.poetry.group.ai.dependencies]
langchain = "^0.0.227"

[tool.poetry.group.testing]
optional = true
[tool.poetry.group.testing.dependencies]
pytest = "^7.4.0"  # Specify the pytest version you want to use
